#320 fix code style