@@ -12,57 +12,58 @@ import org.support.project.common.logic.H2DBServerLogic;
 import org.support.project.knowledge.entity.LikesEntity;
 
 public class LikesDaoTest {
-	/** ログ */
-	private static Log LOG = LogFactory.getLog(LikesDaoTest.class);
+    /** ログ */
+    private static final Log LOG = LogFactory.getLog(LikesDaoTest.class);
 
-	@BeforeClass
-	public static void setUpBeforeClass() throws Exception {
-		H2DBServerLogic.get().start();
-	}
-	@AfterClass
-	public static void tearDownAfterClass() throws Exception {
-		H2DBServerLogic.get().stop();
-	}
+    @BeforeClass
+    public static void setUpBeforeClass() throws Exception {
+        H2DBServerLogic.get().start();
+    }
 
-	@Before
-	public void setUp() throws Exception {
-	}
+    @AfterClass
+    public static void tearDownAfterClass() throws Exception {
+        H2DBServerLogic.get().stop();
+    }
 
-	@After
-	public void tearDown() throws Exception {
-	}
+    @Before
+    public void setUp() throws Exception {
+    }
 
-	@Test
-	public void testInsert() {
-		LikesDao dao = LikesDao.get();
-		
-		// 自動採番
-		LikesEntity entity = new LikesEntity();
-		entity.setKnowledgeId(new Long(1));
-		//log.debug(entity);
-		
-		entity = dao.insert(entity);
-		LOG.debug(entity);
-		Assert.assertNotNull(entity.getNo());
-		
-		Long max = entity.getNo();
-		
-		// 手入力
-		entity = new LikesEntity();
-		entity.setKnowledgeId(new Long(1));
-		entity.setNo(max + 1);
-		
-		entity = dao.rawPhysicalInsert(entity);
-		LOG.debug(entity);
-		Assert.assertEquals(Long.valueOf(max + 1), entity.getNo());
-		
-		// 再度自動採番
-		entity = new LikesEntity();
-		entity.setKnowledgeId(new Long(1));
-		
-		entity = dao.insert(entity);
-		LOG.debug(entity);
-		Assert.assertEquals(Long.valueOf(max + 2), entity.getNo());
-	}
+    @After
+    public void tearDown() throws Exception {
+    }
+
+    @Test
+    public void testInsert() {
+        LikesDao dao = LikesDao.get();
+
+        // 自動採番
+        LikesEntity entity = new LikesEntity();
+        entity.setKnowledgeId(new Long(1));
+        // log.debug(entity);
+
+        entity = dao.insert(entity);
+        LOG.debug(entity);
+        Assert.assertNotNull(entity.getNo());
+
+        Long max = entity.getNo();
+
+        // 手入力
+        entity = new LikesEntity();
+        entity.setKnowledgeId(new Long(1));
+        entity.setNo(max + 1);
+
+        entity = dao.rawPhysicalInsert(entity);
+        LOG.debug(entity);
+        Assert.assertEquals(Long.valueOf(max + 1), entity.getNo());
+
+        // 再度自動採番
+        entity = new LikesEntity();
+        entity.setKnowledgeId(new Long(1));
+
+        entity = dao.insert(entity);
+        LOG.debug(entity);
+        Assert.assertEquals(Long.valueOf(max + 2), entity.getNo());
+    }
 
 }
